<resources>
    <string name="app_name">Simple Organizer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="alarmsTab">Alarms</string>
    <string name="notesTab">Notes</string>
    <string name="dateAndTimeTab"><![CDATA[Date & Time]]></string>
    <string name="alarms">Alarms</string>
    <string name="notes">Notes</string>
    <string name="back">back</string>
    <string name="snooze">Snooze</string>
    <string name="stop">Stop</string>
    <string name="alarm">ALARM!!!</string>
    <string name="note_name">Note Name</string>
    <string name="date_and_time">Date and time</string>
    <string name="_8942">⋮</string>
    <string name="note_preview">Note Preview</string>
    <string name="priority_note">Set priority</string>
    <string name="delete_note">Delete</string>

    <string name="test_card">We’re pleased to announce C++ B-Tree, a C++ template library that implements B-tree containers with an analogous interface to the standard STL map, set, multimap, and multiset containers. B-trees are well-known data structures for organizing secondary storage, because they are optimized for reading and writing large blocks of data. But the same property that makes B-trees appropriate for use with databases and file systems also makes them appropriate for use in main-memory, just with smaller blocks.</string>
    <string name="save_note">Save</string>

    <string-array name="snoozeTimeItems">
        <item>1 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
        <item>35 min</item>
    </string-array>

    <string-array name="silenceAfterItems">
        <item>1 min</item>
        <item>2 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
    </string-array>

    <string-array name="daysOfPeriod">
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
        <item>SUNDAY</item>
    </string-array>

    <string-array name="priorities">
        <item>Low</item>
        <item>Medium</item>
        <item>Height</item>
    </string-array>

</resources>
