<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/note_name"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txtOptionDigit"
            app:layout_constraintStart_toEndOf="@+id/imageViewPriority"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDateAndTime"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/date_and_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.973"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNotePrev" />

        <TextView
            android:id="@+id/txtOptionDigit"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/_8942"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNotePrev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/note_preview"
            app:layout_constraintBottom_toTopOf="@+id/textViewDateAndTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <ImageView
            android:id="@+id/imageViewPriority"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:scaleType="centerCrop"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintEnd_toStartOf="@+id/textViewName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pr_green" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
